# python-producer-consumer

./: .gitignore  .secrets.toml  main.py  pyproject.toml
schemas/: service-tree-value.json
src/class-based-prod-consu/: model.py  producer.py
src/class_based_consumer_producer/: model.py  producer.py
src/generic_consumer_producer/: generic_consumer.py  generic_producer.py
